<resources>
    <string name="app_name" translatable="false">MasCotas</string>
    <string name="titulologin">INGRESO</string>
    <string name="tituloRegistro">REGISTRO</string>
    <string name="email">Correo</string>
    <string name="ingresar">Ingresar</string>
    <string name="registro">Registrarse</string>
    <string name="contraseña">Contraseña</string>
    <string name="recuperarContraseña">¿Olvido su Contraseña?</string>
    <string name="noestaRegistrado">¿Aun no esta Registrado?</string>
    <string name="yaTieneCuenta">¿Ya esta Registrado?</string>
    <string name="toast1">Debe completar todos los campos</string>
    <string name="toast2">Inicio de sesion exitoso</string>
    <string name="toast3">No se pudo iniciar sesion correctamente</string>
    <string name="toast15">Se envio un mail para reestablecer contraseña</string>
    <string name="toast16">Se envio un mail para reestablecer contraseña</string>
    <string name="toast17">Error, no se puede reestablecer</string>
    <string name="espere_por_favor">Espere un momento por favor</string>
    <string name="toast_debe">Debe iniciar sesion</string>


    <string name="Titulo">Titulo</string>
    <string name="Creador">Creador</string>
    <string name="Fecha">Fecha</string>
    <string name="Hora">Hora</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Localizacion">Localizacion</string>
    <string name="Cupo">Cupo</string>
    <string name="Inscripto">Inscripto</string>
    <string name="Costo">Costo</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Se requiere acceso al servicio de ubicación para demostrar la función \'mi ubicación\', que muestra su ubicación actual en el mapa.</string>
    <string name="location_permission_denied">Este ejemplo requiere permiso de ubicación para habilitar la capa \'mi ubicación\'. Inténtelo de nuevo y conceda acceso para usar la ubicación el permiso se ha denegado permanentemente, se puede habilitar desde Configuración del sistema Aplicaciones  \'Demostraciones de la API de Google Maps\'</string>
    <string name="permission_required_toast">Se requieren permisos de localizacion para esta demo </string>
    <string name="title_activity_main_turnos">Main_Turnos_Activity</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">contraseña</string>
    <string name="action_sign_in">Iniciar o Registrarse</string>
    <string name="action_sign_in_short">Iniciar sesion</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Usuario no valido</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Fallo inicio de sesion"</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>

</resources>