<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.DetailsUserActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/images_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/pet_photoo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#3F6BF1"
                    app:srcCompat="@drawable/ic_image" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:cardCornerRadius="5dp"
                app:cardElevation = "15dp"
                >

                <LinearLayout
                    android:id="@+id/images_btnn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible">

                <TextView
                    android:id="@+id/textViewtitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/Titulo"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textViewCosto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/Costo"
                        android:textSize="20sp"
                        android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textViewCreador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/Creador"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="5dp"
            android:background="@color/black">

        </TextView>


        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            map:cameraZoom="10"
            map:uiRotateGestures="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/Fecha"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/Hora"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/textViewDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/Descripcion"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/textViewCupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/Cupo"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/black"/>

        <Button
            android:id="@+id/btn_Turno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="35sp"
            android:backgroundTint="@color/color"
            android:background="@drawable/boton_con_borde"
            android:text="Solicitar Turno"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>